Squashed commit of the following:
commit 28b9c9dbd25c308db50e4e0742c5e2bbffbe1b7b
Author: Andrew Petrov <marsofandrew@gmail.com>
Date:   Tue Nov 30 10:12:56 2021 +0300

    Add Swagger-ui

commit 123d3e253e5843462198842fa6f8031a762ecfec
Author: Andrew Petrov <marsofandrew@gmail.com>
Date:   Sun Nov 28 13:17:40 2021 +0300

    [6] Implement REST API

commit 4dc60a6ef981e439b72568e66a19dd6edd841966
Author: Andrew Petrov <marsofandrew@gmail.com>
Date:   Sun Nov 28 13:17:40 2021 +0300

    [6] Implement REST API