@@ -1,12 +1,16 @@
 package ru.spbstu.core.controller;
 
 import lombok.RequiredArgsConstructor;
-import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import ru.spbstu.core.file.ByteFile;
 import ru.spbstu.core.file.Splitter;
@@ -20,16 +24,11 @@ import ru.spbstu.db.service.FileService;
 import java.io.IOException;
 import java.net.URI;
 import java.util.List;
-import java.util.Map;
-import java.util.concurrent.*;
 import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
 public class FileController {
-
-    private static final Executor EXECUTOR = Executors.newFixedThreadPool(
-            Runtime.getRuntime().availableProcessors() + 1);
 
     private final Storage storage;
     private final Splitter splitter;
@@ -37,56 +36,51 @@ public class FileController {
     private final FileService fileService;
     private final HashConverter hashConverter;
 
-
     @PostMapping(value = "/file", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     @ResponseBody
     public ResponseEntity<String> uploadFile(
-            @RequestPart("file") MultipartFile file) throws IOException, ExecutionException, InterruptedException, TimeoutException {
-        final var parts = splitter.split(file.getInputStream());
-        final var hashes = parts.stream()
-                .map(byteFile -> Pair.of(hashConverter.toHash(byteFile.bytes()), byteFile))
-                .toList();
-
-        final var hashToBytes = hashes.stream()
-                .collect(Collectors.toMap(Pair::getKey, Pair::getValue, (bf1, bf2) -> bf1));
-
-        final var futures = hashToBytes.entrySet().stream()
-                .map(entry -> CompletableFuture.runAsync(() -> handleWrite(entry), EXECUTOR))
-                .toList();
-
-        CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).get(1, TimeUnit.HOURS);
-
-        final var id = saveFileToDB(hashes.stream().map(Pair::getKey).toList(), file.getContentType());
+            @RequestPart("file") MultipartFile file) throws IOException {
+        final var hashes = splitter.split(file.getInputStream()).stream()
+                .map(this::saveSubFile)
+                .collect(Collectors.toList());
+        final var id = saveData(hashes, file.getContentType());
         return ResponseEntity.created(URI.create(id)).body(id);
     }
 
     @GetMapping(value = "/file/{id}")
     @ResponseBody
     public ResponseEntity<Resource> downloadFile(@PathVariable("id") String fileId) throws IOException {
-        final var fileOptional = fileService.findById(fileId);
-        if (fileOptional.isEmpty()) {
+        final var file = fileService.findById(fileId);
+        if (file.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
-        final var file = fileOptional.get();
+        final var fileRecord = file.get();
         final var resultFile = splitter.combine(
-                file.hashes().stream()
+                fileRecord.hashes().stream()
                         .map(storage::getFile)
                         .collect(Collectors.toList()));
         return ResponseEntity.ok()
                 .contentLength(resultFile.available())
-                .contentType(MediaType.valueOf(file.mimeType()))
+                .contentType(MediaType.valueOf(fileRecord.mimeType()))
                 .body(new InputStreamResource(resultFile));
     }
 
-    private void handleWrite(final Map.Entry<String, ByteFile> tuple) {
-        blockService.findById(tuple.getKey()).ifPresentOrElse(ign -> {
+    private String saveSubFile(final ByteFile file) {
+        final var hash = hashConverter.toHash(file.bytes());
+        blockService.findById(hash).ifPresentOrElse(ign -> {
         }, () -> {
-            storage.save(tuple.getValue(), tuple.getKey());
-            blockService.insert(new Block(tuple.getKey(), tuple.getKey()));
+            storage.connect();
+            try (storage) {
+                storage.save(file, hash);
+                blockService.insert(new Block(hash, hash));
+            } catch (Exception e) {
+                throw new RuntimeException("Unbelievable", e);
+            }
         });
+        return hash;
     }
 
-    private String saveFileToDB(final List<String> hashes, String mimeType) {
+    private String saveData(final List<String> hashes, String mimeType) {
         return fileService.insert(new File(null, hashes, mimeType)).id();
     }
 
